# ullm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yaml  publish.yaml
tests/: test_chat_as_openai.py  test_openai.py
ullm/: __init__.py  alibaba.py  anthropic.py  baichuan.py  baidu.py  base.py  bytedance.py  cli.py  cloudflare.py  cohere.py  deepseek.py  google.py  groq.py  hub.py  iflytek.py  minimax.py  moonshot.py  ollama.py  openai.py  openai_types.py  openrouter.py  perplexity.py  skywork.py  stepfun.py  tencent.py  together.py  types.py  zero_one.py  zhipu.py
